k8s/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: voting
spec:
  type: ClusterIP
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
